--- a/metainflu/backend/package.json
+++ b/metainflu/backend/package.json
@@ -18,6 +18,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
+    "node-fetch": "^2.7.0",
     "slugify": "^1.6.6"
   }
 }
