--- a/metainflu/frontend/client-app/package.json
+++ b/metainflu/frontend/client-app/package.json
@@ -13,9 +13,12 @@
     "@capacitor/android": "^7.4.3",
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
+    "@vitejs/plugin-basic-ssl": "^1.2.0",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vueuse/core": "^10.11.0",
     "chart.js": "^4.5.1",
     "hammerjs": "^2.0.8",
+    "leaflet": "^1.9.4",
     "swiper": "^11.1.12",
     "vue": "^3.4.21",
     "vue-chartjs": "^5.3.2",
